@@ -636,12 +636,18 @@ name|toString
 parameter_list|()
 block|{
 return|return
+name|_strategy
+operator|!=
+literal|null
+condition|?
 name|String
 operator|.
 name|valueOf
 argument_list|(
 name|_strategy
 argument_list|)
+else|:
+name|_strategyName
 return|;
 block|}
 block|}
