@@ -1824,6 +1824,121 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveWithConflictManagerPerModule
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// test case for IVY-448
+comment|// all modules from myorg
+comment|// module1
+comment|//    -> module2-1.0
+comment|//    -> module3-2.0
+comment|// module2
+comment|//    -> module3-1.0
+comment|// settings use 'all' as default conflict manager, and latest-revision for modules from myorg
+name|Ivy
+name|ivy
+init|=
+operator|new
+name|Ivy
+argument_list|()
+decl_stmt|;
+name|ivy
+operator|.
+name|configure
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/IVY-448/ivysettings.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/IVY-448/ivy.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// rev 1.0 should have been evicted by latest-revision conflict manager
+name|assertTrue
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"myorg"
+argument_list|,
+literal|"module3"
+argument_list|,
+literal|"2.0"
+argument_list|,
+literal|"module3"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|getArchiveFileInCache
+argument_list|(
+literal|"myorg"
+argument_list|,
+literal|"module3"
+argument_list|,
+literal|"1.0"
+argument_list|,
+literal|"module3"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveRequiresIvyFile
 parameter_list|()
 throws|throws
