@@ -1,0 +1,3 @@
+<ivy-module version="1.0">
+    <info organisation="myorg" module="module3" revision="1.0"/>
+</ivy-module>
